# automation

./: .gitignore  .oclint  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  LICENSE.txt  Makefile  NOTICE.txt  README  README.md  Vagrantfile  main.c
cmake/Modules/: CodeCoverage.cmake  googletest.cmake
env/: .bashrc  .oclint  Makefile
env/automation/: CMakeLists.txt
env/automation/test/: CMakeLists.txt
include/: awesome.h
project/: Makefile
project/cmake/Modules/: CodeCoverage.cmake
project/test/: hello_test.cc
src/: CMakeLists.txt  awesome.cc  main.cc
test/: CMakeLists.txt  hello_test.cc  hello_test.py
